--- a/BankApp.MvcUI/Views/Shared/_Layout.cshtml
+++ b/BankApp.MvcUI/Views/Shared/_Layout.cshtml
@@ -50,8 +50,9 @@
     <link rel="stylesheet" href="~/Content/css/main.css">
     <!-- style CSS
         ============================================ -->
-    <link rel="stylesheet" href="~/Content/css/style.css">
 
+    <link href="~/Content/style.css" rel="stylesheet" />
+    
     <!-- responsive CSS
         ============================================ -->
     <link rel="stylesheet" href="~/Content/css/responsive.css">
