--- a/BankApp.MvcUI/Views/Kullanici/Create.cshtml
+++ b/BankApp.MvcUI/Views/Kullanici/Create.cshtml
@@ -15,7 +15,7 @@
                 <div class="input-group">
                     <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-support"></i></span>
                     <div class="nk-int-st">
-                        <input type="text" maxlength="11" pattern="\d{11}" title="Lütfen 11 Haneli TC Kimlik Numaranızı Giriniz." class="form-control" placeholder="Tc Kimlik No" name="TCKN" required>
+                        <input type="text" maxlength="11" pattern="\d{11}" title="Lütfen 11 Haneli TC Kimlik Numaranızı Giriniz." class="form-control sayi" placeholder="Tc Kimlik No" name="TCKN" required>
                         @Html.ValidationMessageFor(model => model.TCKN, "", new { @class = "text-danger" })
 
                     </div>
@@ -23,21 +23,21 @@
                 <div class="input-group mg-t-15">
                     <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-support"></i></span>
                     <div class="nk-int-st">
-                        <input type="text" class="form-control" placeholder="İsim" name="isim" required>
+                        <input type="text" class="form-control isim" id="isim" placeholder="İsim" name="isim" required>
                         @Html.ValidationMessageFor(model => model.isim, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="input-group mg-t-15">
                     <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-support"></i></span>
                     <div class="nk-int-st">
-                        <input type="text" class="form-control" placeholder="Soy isim" name="soyisim" required>
+                        <input type="text" class="form-control isim" id="isim"placeholder="Soy isim" name="soyisim" required>
                         @Html.ValidationMessageFor(model => model.soyisim, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="input-group mg-t-15">
                     <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-plus-symbol"></i></span>
                     <div class="nk-int-st">
-                        <input type="password" class="form-control" placeholder="Şifre" name="sifre" required>
+                        <input type="password" min="4" max="8" maxlength="8" class="form-control" placeholder="Şifre" name="sifre" required>
                         @Html.ValidationMessageFor(model => model.sifre, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                 <div class="input-group mg-t-15">
                     <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-support"></i></span>
                     <div class="nk-int-st">
-                        <input type="text" class="form-control" placeholder="Anne kızlık soyadı" name="kizlikSoyadi" required>
+                        <input type="text" class="form-control isim" placeholder="Anne kızlık soyadı" name="kizlikSoyadi" required>
                         @Html.ValidationMessageFor(model => model.kizlikSoyadi, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -74,14 +74,14 @@
                 <div class="input-group mg-t-15">
                     <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-phone"></i></span>
                     <div class="nk-int-st">
-                        <input type="tel" min="8" maxlength="13" class="form-control" placeholder="Cep Telefonu" name="cepTelefonu" required>
+                        <input type="tel" min="8" maxlength="13" class="form-control sayi" placeholder="Cep Telefonu" name="cepTelefonu" required>
 
                     </div>
                 </div>
                 <div class="input-group mg-t-15">
                     <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-phone"></i></span>
                     <div class="nk-int-st">
-                        <input type="tel" class="form-control" placeholder="Ev Telefonu" name="evTelefonu" required>
+                        <input type="tel" class="form-control sayi" placeholder="Ev Telefonu" name="evTelefonu" required>
                     </div>
                 </div>
                 <div class="input-group mg-t-15">
@@ -90,9 +90,7 @@
                         <input type="text" class="form-control" placeholder="Müşteri Adres" name="musteriAdresi" required>
                     </div>
                 </div>
-                <div class="fm-checkbox">
-                    <label><input type="checkbox" class="i-checks"> <i></i> Keep me signed in</label>
-                </div>
+              
                 <button type="submit" href="Login" data-ma-action="nk-login-switch" data-ma-block="#l-register" class="btn btn-login btn-success btn-float"><i class="notika-icon notika-right-arrow right-arrow-ant"></i></button>
 
             </form>
@@ -100,7 +98,7 @@
 
             <div class="nk-navigation rg-ic-stl">
                 <a href="/Kullanici/Login" data-ma-action="nk-login-switch" data-ma-block="#l-login"><i class="notika-icon notika-right-arrow"></i> <span>Sign in</span></a>
-                <a href="" data-ma-action="nk-login-switch" data-ma-block="#l-forget-password"><i>?</i> <span>Forgot Password</span></a>
+                
             </div>
         </div>
 </div>
