--- a/BankApp.MvcUI/Views/Shared/_Layout.cshtml
+++ b/BankApp.MvcUI/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Dashboard One | Notika - Notika Admin Template</title>
+    <title>Sümer Bank</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- favicon
@@ -75,8 +75,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="footer-copy-right">
                         <p>
-                            Copyright © 2018
-                            . All rights reserved. Template by <a href="~/Content/https://colorlib.com">Colorlib</a>.
+                           !!Sümer Bank!!
                         </p>
                     </div>
                 </div>
@@ -154,4 +153,15 @@
 <script src="~/Content/js/main.js"></script>
 <!-- tawk chat JS
     ============================================ -->
-<script src="~/Content/js/tawk-chat.js"></script>
+
+
+<script>$(".form-control.sayi").keyup(function (){
+  if (this.value.match(/[^0-9]/g)){
+    this.value = this.value.replace(/[^0-9]/g,''); }});</script>
+
+<script>
+    
+$(".form-control.isim").keyup(function (){
+  if (this.value.match(/[^a-zA-Z]/g)){
+   this.value = this.value.replace(/[^a-zA-Z]/g,''); }});
+</script>
