--- a/BankApp.MvcUI/Views/Home/Index.cshtml
+++ b/BankApp.MvcUI/Views/Home/Index.cshtml
@@ -164,7 +164,7 @@
                                 <a href="index-2.html">Hesap Kapatma</a>
                             </li>
                             <li>
-                                <a href="index-3.html">Hesapları Listeleme</a>
+                                <a href="/hesap/Index">Hesapları Listeleme</a>
                             </li>
                             
                         </ul>
