--- a/BankApp.MvcUI/Views/Shared/_Layout.cshtml
+++ b/BankApp.MvcUI/Views/Shared/_Layout.cshtml
@@ -52,13 +52,268 @@
         ============================================ -->
 
     <link href="~/Content/style.css" rel="stylesheet" />
-    
+
     <!-- responsive CSS
         ============================================ -->
     <link rel="stylesheet" href="~/Content/css/responsive.css">
     <!-- modernizr JS
         ============================================ -->
     <script src="~/Content/js/vendor/modernizr-2.8.3.min.js"></script>
+    <!-- Start Header Top Area -->
+    <div class="header-top-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="logo-area">
+                        <a href="#"><img src="~/Content/img/logo/logo.png" alt="" /></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- End Header Top Area -->
+    <!-- Mobile Menu start -->
+    <div class="mobile-menu-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="mobile-menu">
+                        <nav id="dropdown">
+                            <ul class="mobile-menu-nav">
+                                <li>
+                                    <a data-toggle="collapse" data-target="#Charts" href="#">Home</a>
+                                    <ul class="collapse dropdown-header-top">
+                                        <li><a href="index.html">Dashboard One</a></li>
+                                        <li><a href="index-2.html">Dashboard Two</a></li>
+                                        <li><a href="index-3.html">Dashboard Three</a></li>
+                                        <li><a href="index-4.html">Dashboard Four</a></li>
+                                        <li><a href="analytics.html">Analytics</a></li>
+                                        <li><a href="widgets.html">Widgets</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a data-toggle="collapse" data-target="#demoevent" href="#">Email</a>
+                                    <ul id="demoevent" class="collapse dropdown-header-top">
+                                        <li><a href="inbox.html">Inbox</a></li>
+                                        <li><a href="view-email.html">View Email</a></li>
+                                        <li><a href="compose-email.html">Compose Email</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a data-toggle="collapse" data-target="#democrou" href="#">Interface</a>
+                                    <ul id="democrou" class="collapse dropdown-header-top">
+                                        <li><a href="animations.html">Animations</a></li>
+                                        <li><a href="google-map.html">Google Map</a></li>
+                                        <li><a href="data-map.html">Data Maps</a></li>
+                                        <li><a href="code-editor.html">Code Editor</a></li>
+                                        <li><a href="image-cropper.html">Images Cropper</a></li>
+                                        <li><a href="wizard.html">Wizard</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a data-toggle="collapse" data-target="#demolibra" href="#">Charts</a>
+                                    <ul id="demolibra" class="collapse dropdown-header-top">
+                                        <li><a href="flot-charts.html">Flot Charts</a></li>
+                                        <li><a href="bar-charts.html">Bar Charts</a></li>
+                                        <li><a href="line-charts.html">Line Charts</a></li>
+                                        <li><a href="area-charts.html">Area Charts</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a data-toggle="collapse" data-target="#demodepart" href="#">Tables</a>
+                                    <ul id="demodepart" class="collapse dropdown-header-top">
+                                        <li><a href="normal-table.html">Normal Table</a></li>
+                                        <li><a href="data-table.html">Data Table</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a data-toggle="collapse" data-target="#demo" href="#">Forms</a>
+                                    <ul id="demo" class="collapse dropdown-header-top">
+                                        <li><a href="form-elements.html">Form Elements</a></li>
+                                        <li><a href="form-components.html">Form Components</a></li>
+                                        <li><a href="form-examples.html">Form Examples</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a data-toggle="collapse" data-target="#Miscellaneousmob" href="#">App views</a>
+                                    <ul id="Miscellaneousmob" class="collapse dropdown-header-top">
+                                        <li>
+                                            <a href="notification.html">Notifications</a>
+                                        </li>
+                                        <li>
+                                            <a href="alert.html">Alerts</a>
+                                        </li>
+                                        <li>
+                                            <a href="modals.html">Modals</a>
+                                        </li>
+                                        <li>
+                                            <a href="buttons.html">Buttons</a>
+                                        </li>
+                                        <li>
+                                            <a href="tabs.html">Tabs</a>
+                                        </li>
+                                        <li>
+                                            <a href="accordion.html">Accordion</a>
+                                        </li>
+                                        <li>
+                                            <a href="dialog.html">Dialogs</a>
+                                        </li>
+                                        <li>
+                                            <a href="popovers.html">Popovers</a>
+                                        </li>
+                                        <li>
+                                            <a href="tooltips.html">Tooltips</a>
+                                        </li>
+                                        <li>
+                                            <a href="dropdown.html">Dropdowns</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a data-toggle="collapse" data-target="#Pagemob" href="#">Pages</a>
+                                    <ul id="Pagemob" class="collapse dropdown-header-top">
+                                        <li>
+                                            <a href="contact.html">Bilgi Güncelleme</a>
+                                        </li>
+
+                                    </ul>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Mobile Menu end -->
+    <!-- Main Menu area start-->
+    <div class="main-menu-area mg-tb-40">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <ul class="nav nav-tabs notika-menu-wrap menu-it-icon-pro">
+                        <li class="active">
+                            <a data-toggle="tab" href="#Home"><i class="notika-icon notika-house"></i> Hesap İşlemleri</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#Interface"><i class="notika-icon notika-edit"></i> HGS İşlemleri</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#Charts"><i class="notika-icon notika-bar-chart"></i> Kredi İşlemleri</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#Tables"><i class="notika-icon notika-windows"></i> Virman İşlemleri</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#Forms"><i class="notika-icon notika-form"></i> Havale İşlemleri</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#Page"><i class="notika-icon notika-support"></i> Profil</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content custom-menu-content">
+                        <div id="Home" class="tab-pane in active notika-tab-menu-bg animated flipInX">
+                            <ul class="notika-main-menu-dropdown">
+                                <li>
+                                    <a href="index.html">Hesap Açma</a>
+                                </li>
+                                <li>
+                                    <a href="index-2.html">Hesap Kapatma</a>
+                                </li>
+                                <li>
+                                    <a href="index-3.html">Hesapları Listeleme</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div id="mailbox" class="tab-pane notika-tab-menu-bg animated flipInX">
+                            <ul class="notika-main-menu-dropdown">
+                                <li>
+                                    <a href="inbox.html">Inbox</a>
+                                </li>
+                                <li>
+                                    <a href="view-email.html">View Email</a>
+                                </li>
+                                <li>
+                                    <a href="compose-email.html">Compose Email</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div id="Interface" class="tab-pane notika-tab-menu-bg animated flipInX">
+                            <ul class="notika-main-menu-dropdown">
+                                <li>
+                                    <a href="animations.html">HGS Başvurusu</a>
+                                </li>
+                                <li>
+                                    <a href="google-map.html">HGS İşlemleri</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div id="Charts" class="tab-pane notika-tab-menu-bg animated flipInX">
+                            <ul class="notika-main-menu-dropdown">
+                                <li>
+                                    <a href="flot-charts.html">Kredi İşlemleri</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div id="Tables" class="tab-pane notika-tab-menu-bg animated flipInX">
+
+                        </div>
+                        <div id="Forms" class="tab-pane notika-tab-menu-bg animated flipInX">
+
+                        </div>
+                        <div id="Appviews" class="tab-pane notika-tab-menu-bg animated flipInX">
+                            <ul class="notika-main-menu-dropdown">
+                                <li>
+                                    <a href="notification.html">Notifications</a>
+                                </li>
+                                <li>
+                                    <a href="alert.html">Alerts</a>
+                                </li>
+                                <li>
+                                    <a href="modals.html">Modals</a>
+                                </li>
+                                <li>
+                                    <a href="buttons.html">Buttons</a>
+                                </li>
+                                <li>
+                                    <a href="tabs.html">Tabs</a>
+                                </li>
+                                <li>
+                                    <a href="accordion.html">Accordion</a>
+                                </li>
+                                <li>
+                                    <a href="dialog.html">Dialogs</a>
+                                </li>
+                                <li>
+                                    <a href="popovers.html">Popovers</a>
+                                </li>
+                                <li>
+                                    <a href="tooltips.html">Tooltips</a>
+                                </li>
+                                <li>
+                                    <a href="dropdown.html">Dropdowns</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div id="Page" class="tab-pane notika-tab-menu-bg animated flipInX">
+                            <ul class="notika-main-menu-dropdown">
+                                <li>
+                                    <a href="contact.html">Bilgileri Güncelleme</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Main Menu area End-->
+
 </head>
 <body>
     <div>
@@ -161,7 +416,49 @@
 
 <script>
     
-$(".form-control.isim").keyup(function (){
-  if (this.value.match(/[^a-zA-Z]/g)){
-   this.value = this.value.replace(/[^a-zA-Z]/g,''); }});
+    $(".form-control.isim").keyup(function (){
+        if (this.value.match(/[^a-zA-Z]/g)){
+            this.value = this.value.replace(/[^a-zA-Z]/g,''); }});
+</script>
+
+
+<script>
+    $(".yeniHesap").click(function () {
+        var uid = $(this).attr("id");
+        
+        $.ajax(
+            {
+                type: "POST",
+                url: "/hesap/Create",
+                data: { hesapNo: uid },
+                success: function (gelenveri) {
+                    
+                    alert("Hesap Oluşturuldu.")
+                    location.reload();
+                },
+                error: function () {
+                    alert("Hesap oluşturulamadı!");
+                }
+            });
+    });
+</script>
+
+<script>
+    $(".hesapsil").click(function () {
+        var eknumarasi = $(this).attr("id");
+        $.ajax(
+            {
+                type: "POST",
+                url: "/hesap/sil",
+                data: { ekNo: eknumarasi },
+                success: function (gelenveri) {
+
+                    alert("Hesap silindi!");
+                    location.reload();
+                },
+                error: function () {
+                    alert("Hesap silinemedi!");
+                }
+            });
+    });
 </script>
