--- a/BankApp.MvcUI/Views/hesap/Index.cshtml
+++ b/BankApp.MvcUI/Views/hesap/Index.cshtml
@@ -16,7 +16,7 @@
                 <div class="normal-table-list">
                     <div class="basic-tb-hd">
                         <h1>Hesaplarım</h1>
-                        <h3><button class="yeniHesap btn-success" id="@User.Identity.Name">Yeni Hesap Oluştur</b></h3>
+                        <h3><button class="yeniHesap btn btn-success" id="@User.Identity.Name">Yeni Hesap Oluştur</b></h3>
                     </div>
                     <div class="bsc-tbl">
                         <table class="table table-sc-ex" id="datatable">
@@ -46,7 +46,7 @@
                                         <td>@m.hesapNumarasi</td>
                                         <td>@m.bakiye</td>
                                         <td>@m.hesapAcilisTarihi</td>
-                                        <td><button id="@m.ekNo" class="hesapsil btn-danger">Hesap Sil</button></td>
+                                        <td><button id="@m.ekNo" class="hesapsil btn btn-danger">Hesap Sil</button></td>
                                     </tr>
                                 }
                             }
