--- a/BankApp.MvcUI/Views/Shared/_Layout.cshtml
+++ b/BankApp.MvcUI/Views/Shared/_Layout.cshtml
@@ -529,7 +529,7 @@
                 },
                 error: function () {
                 
-                    alert("Hata oluştu");
+                    alert("Gönderici Hesabın Bakiyesi Yetersiz!");
                 }
             });
     });
