--- a/BankApp.MvcUI/Views/Shared/_Layout.cshtml
+++ b/BankApp.MvcUI/Views/Shared/_Layout.cshtml
@@ -194,7 +194,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <ul class="nav nav-tabs notika-menu-wrap menu-it-icon-pro">
                         <li class="active">
-                            <a data-toggle="tab" href="#Home"><i class="notika-icon notika-house"></i> Hesap İşlemleri</a>
+                            <a href="/hesap/Index"><i class="notika-icon notika-house"></i> Hesap İşlemleri</a>
                         </li>
                         <li>
                             <a data-toggle="tab" href="#Interface"><i class="notika-icon notika-edit"></i> HGS İşlemleri</a>
@@ -216,14 +216,12 @@
                         <div id="Home" class="tab-pane in active notika-tab-menu-bg animated flipInX">
                             <ul class="notika-main-menu-dropdown">
                                 <li>
-                                    <a href="index.html">Hesap Açma</a>
+                                    <a href="/hesap/parayukle">Para Yükleme</a>
                                 </li>
                                 <li>
-                                    <a href="index-2.html">Hesap Kapatma</a>
+                                    <a href="/hesap/paracek">Para Çekme</a>
                                 </li>
-                                <li>
-                                    <a href="index-3.html">Hesapları Listeleme</a>
-                                </li>
+                            
 
                             </ul>
                         </div>
@@ -421,6 +419,60 @@
             this.value = this.value.replace(/[^a-zA-Z]/g,''); }});
 </script>
 
+<script>
+    $("#paraCekme").click(function () {
+        var hesapNo = $("#cekilecekHesap").val();
+         if (hesapNo != null && hesapNo != ''){
+        $.ajax(
+           
+        
+                {
+
+                type: "POST",
+                url: "/hesap/ParaCek",
+                data: "hesapNo=" + $("#cekilecekHesap").val() + "&bakiye=" + $("#bakiye").val(),
+                success: function () {
+                    alert("Para Çekildi!!")
+                    location.reload();},
+                error: function () {alert("Yetersiz Bakiye!!!");}
+            }
+       
+             );
+              }
+    })
+</script>
+
+<script>
+    $("#bakiyeYukle").click(function () {
+        var hesapNo = $("#yuklenicekHesap").val();
+        if (hesapNo != null && hesapNo != '')
+        {
+            $.ajax(
+                {
+
+                    type: "POST",
+                    url: "/hesap/ParaYukle",
+                    data: "hesapNo=" + $("#yuklenicekHesap").val() + "&bakiye=" + $("#bakiye").val(),
+                    success: function () {
+                        debugger;
+                        alert("Para Gönderildi!!")
+                        location.reload();
+                    },
+                    error: function () {
+                        debugger;
+                        alert("Para Gönderilemedi!!");
+                    }
+                });
+        }
+    }
+        
+        
+        
+        
+        
+        )
+</script>
+
 
 <script>
     $(".yeniHesap").click(function () {
@@ -456,8 +508,8 @@
                     alert("Hesap silindi!");
                     location.reload();
                 },
-                error: function () {
-                    alert("Hesap silinemedi!");
+                error: function (mesaj) {
+                    alert(mesaj);
                 }
             });
     });
@@ -514,24 +566,25 @@
         var gonderen = $("#Gonderen").val();
         var alici = $("#Alici").val();
         var bakiye = $("#bakiye").val();
-      
-        $.ajax(
-            {
-                type: "POST",
-                url: '@Url.Action("Virman", "Transfer")',
-                data: "Gonderen=" + $("#Gonderen").val() + "&Alici=" + $("#Alici").val() +
+        if (gonderen != null && gonderen != '' && alici!=null && alici!= '' && bakiye!= null && bakiye!='') {
+            $.ajax(
+                {
+                    type: "POST",
+                    url: '@Url.Action("Virman", "Transfer")',
+                    data: "Gonderen=" + $("#Gonderen").val() + "&Alici=" + $("#Alici").val() +
 
-                    "&Bakiye=" + $("#bakiye").val(),
-                success: function (gelenveri) {
-              
-                    alert("başarılı");
-                    location.reload();
-                },
-                error: function () {
-                
-                    alert("Gönderici Hesabın Bakiyesi Yetersiz!");
-                }
-            });
+                        "&Bakiye=" + $("#bakiye").val(),
+                    success: function (gelenveri) {
+
+                        alert("başarılı");
+                        location.reload();
+                    },
+                    error: function () {
+
+                        alert("Gönderici Hesabın Bakiyesi Yetersiz!");
+                    }
+                });
+        }
     });
 
 
