login bug düzeltildi

--- a/BankApp.MvcUI/Views/Kullanici/Login.cshtml
+++ b/BankApp.MvcUI/Views/Kullanici/Login.cshtml
@@ -25,7 +25,7 @@
                 <div class="input-group mg-t-15">
                     <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-edit"></i></span>
                     <div class="nk-int-st">
-                        <input type="password" min="4" max="8" maxlength="8" class="form-control" placeholder="Şifre" name="sifre">
+                        <input type="password" minlength="4" maxlength="8" class="form-control" placeholder="Şifre" name="sifre" required>
                     </div>
                 </div>
                 
