--- a/BankApp.MvcUI/Views/Shared/_Layout.cshtml
+++ b/BankApp.MvcUI/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
     <title>Sümer Bank</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- favicon
-        ============================================ -->
+
+    
     <link rel="shortcut icon" type="image/x-icon" href="~/Content/img/favicon.ico">
     <!-- Google Fonts
         ============================================ -->
@@ -221,7 +221,7 @@
                                 <li>
                                     <a href="/hesap/paracek">Para Çekme</a>
                                 </li>
-                            
+
 
                             </ul>
                         </div>
@@ -344,6 +344,7 @@
 <!-- bootstrap JS
     ============================================ -->
 <script src="~/Content/js/bootstrap.min.js"></script>
+
 <!-- wow JS
     ============================================ -->
 <script src="~/Content/js/wow.min.js"></script>
@@ -576,7 +577,7 @@
                         "&Bakiye=" + $("#bakiye").val(),
                     success: function (gelenveri) {
 
-                        alert("başarılı");
+                        alert("Para Gönderildi.");
                         location.reload();
                     },
                     error: function () {
