--- a/BankApp.MvcUI/Views/Shared/_Layout.cshtml
+++ b/BankApp.MvcUI/Views/Shared/_Layout.cshtml
@@ -206,7 +206,7 @@
                             <a href="/Transfer/Virman"><i class="notika-icon notika-windows"></i> Virman İşlemleri</a>
                         </li>
                         <li>
-                            <a data-toggle="tab" href="#Forms"><i class="notika-icon notika-form"></i> Havale İşlemleri</a>
+                            <a href="/Havale/HavaleGonder"><i class="notika-icon notika-form"></i> Havale İşlemleri</a>
                         </li>
                         <li>
                             <a data-toggle="tab" href="#Page"><i class="notika-icon notika-support"></i> Profil</a>
