--- a/BankApp.MvcUI/Views/Shared/_Layout.cshtml
+++ b/BankApp.MvcUI/Views/Shared/_Layout.cshtml
@@ -510,7 +510,7 @@
                     location.reload();
                 },
                 error: function (mesaj) {
-                    alert(mesaj);
+                    alert("Hesapta bakiye bulunduğu için silinemedi!");
                 }
             });
     });
